Implement global exception handling